[package]
name = "barexp"
version = "0.1.0"
edition = "2021"
description = "A Rust library providing elegant barrel exports with compile-time safety"
license = "MIT"  # Choose a license
repository = "https://github.com/krcpa/barexp"
documentation = "https://docs.rs/barexp"
readme = "README.md"
keywords = ["export", "barrel", "macro", "module"]
categories = ["development-tools", "rust-patterns"]


[dependencies]
inventory = "0.3.15"
walkdir = "2.5.0"

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"