[package]
name = "barexp"
version = "1.0.0"
edition = "2021"
description = "A Rust library that automatically generates mod.rs files for your project"
license = "MIT"
repository = "https://github.com/krcpa/barexp"
documentation = "https://docs.rs/barexp"
readme = "README.md"
keywords = ["auto", "module", "mod", "generator", "export"]
categories = ["development-tools", "rust-patterns", "filesystem"]

[dependencies]
inventory = "0.3.15"
walkdir = "2.5.0"

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"