[package]
name = "barexp-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for barexp"
license = "MIT"
repository = "https://github.com/krcpa/barexp"
documentation = "https://docs.rs/barexp-macros"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.20.2"
syn = { version = "2.0.90", features = ["extra-traits", "full"] }
quote = "1.0.37"
proc-macro2 = "1.0.92"
